fixing spacing around h2

--- a/themes/digital.gov/src/scss/old_css/_enlightened-styles.scss
+++ b/themes/digital.gov/src/scss/old_css/_enlightened-styles.scss
@@ -203,9 +203,9 @@ h1 {
 	}
 
 h2 {
-	@include u-margin-top(8);
-	font-size: 30px;
-	letter-spacing:-0.03em;
+	@include u-margin-top(7);
+	@include u-margin-bottom('105');
+	@include u-font('sans', '2xl');
 }
 
 h3 {
